Added k-NN and uer input

--- a/Labs/Untitled-1.ipynb
+++ b/Labs/Untitled-1.ipynb
@@ -22,11 +22,11 @@
     "import math\n",
     "\n",
     "file = \"datapoints.txt\"\n",
-    "\n",
-    "pichu_x= []\n",
-    "pichu_y=[]\n",
-    "pikachu_x=[]\n",
-    "pikachu_y=[]      \n",
+    "test_points = []\n",
+    "pichu_x = []\n",
+    "pichu_y = []\n",
+    "pikachu_x = []\n",
+    "pikachu_y = []      \n",
     "\n",
     "#I decided to turn data cleaning to a function to improve the script's readability and reusability\n",
     "def clean_line(line):\n",
@@ -42,6 +42,19 @@
     "        print(f\"Skipping line {line.strip()}. Error{e}.\")\n",
     "        return None\n",
     "\n",
+    "def clean_testpoints(line):\n",
+    "\n",
+    "    stripped = line.strip()\n",
+    "    clean_line = stripped.lstrip('0123456789. ')\n",
+    "    no_par = clean_line.replace('(', '').replace(')','')\n",
+    "    try:\n",
+    "        coordinates = [float(item.strip()) for item in no_par.split(',')]\n",
+    "\n",
+    "        return tuple (coordinates)\n",
+    "    \n",
+    "    except(ValueError,IndexError):\n",
+    "        return None \n",
+    "\n",
     "\n",
     "def euclidean_distance(p1,p2): #This will be used for the nearest neighbour algorithm\n",
     "    dist_x = p2[0] - p1[0]\n",
@@ -53,7 +66,7 @@
     "def k_nene(pichu_x, pichu_y, pikachu_x, pikachu_y, test_point):\n",
     "    dist_labels = []\n",
     "    k = 11\n",
-    "    p = 0\n",
+    "\n",
     "    for i in range(len(pichu_x)):\n",
     "        point = (pichu_x[i], pichu_y[i])\n",
     "        distance = euclidean_distance(point,test_point)\n",
@@ -65,7 +78,14 @@
     "        distance = euclidean_distance(point, test_point)\n",
     "        dist_labels.append((distance, 1))\n",
     "    \n",
-    "    dls = dist_labels.sort()\n",
+    "    dist_labels.sort()\n",
+    "    nearest = dist_labels[:k]\n",
+    "    \n",
+    "    counter = sum(neighbor[1] for neighbor in nearest)\n",
+    "\n",
+    "    if counter > (k-counter):\n",
+    "        return 1 #prediction = Pikachu\n",
+    "    else: return 0 #prediction = Pichu\n",
     "    \n",
     "\n",
     "#Main Script Structure:\n",
@@ -85,14 +105,53 @@
     "                pikachu_y.append(height)\n",
     "\n",
     "\n",
+    "print(\"Welcome to the Pikachu/Pichu classifier!\\n Would you like to:\")\n",
+    "print(\"1 - Input the test point yourself\")\n",
+    "print(\"2 - Read a set of points from the file testpoints.txt\")\n",
+    "try:\n",
+    "    choice = input(\"Enter 1 or 2: \")\n",
+    "except ValueError:\n",
+    "    print(\"Invalid input.\")\n",
+    "\n",
+    "if choice == \"1\":\n",
+    "    while True:\n",
+    "        try: \n",
+    "            width = float(input(\"PLease enter the Pokemon's width in cm.\"))\n",
+    "            height = float(input(\"Please enter the Pokemon's height in cm.\"))\n",
+    "            test_points.append((width,height))\n",
+    "            break\n",
+    "        except ValueError: print(\"Please enter a valid value!\")\n",
+    "        \n",
+    "\n",
+    "\n",
+    "elif choice == \"2\":\n",
+    "    with open ('testpoints.txt', 'r') as test:\n",
+    "        next(test)\n",
+    "        for line in test:\n",
+    "            point = clean_testpoints(line)\n",
+    "            if point != None:\n",
+    "                test_points.append(point)\n",
+    "\n",
+    "else: print(\"Invalid choice, please select 1 or 2!\")\n",
+    "\n",
+    "       \n",
     "#Now we visualize the data:\n",
-    "plt.scatter(pichu_x, pichu_y,color = 'blue', label = \"Pichu\")\n",
+    "plt.scatter(pichu_x, pichu_y, color = 'blue', label = \"Pichu\")\n",
     "plt.scatter(pikachu_x,pikachu_y, color = 'orange', label = \"Pikachu\")\n",
     "plt.xlabel(\"Width(cm)\")\n",
     "plt.ylabel(\"Height(cm)\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "for point in test_points:\n",
+    "    prediction = k_nene(pichu_x, pichu_y, pikachu_x, pikachu_y, point)\n",
+    "\n",
+    "    if prediction == 1: prediction_label = \"Pikachu\"\n",
+    "    elif prediction == 0: prediction_label = \"Pichu\"\n",
+    "    else: prediction_label = \"Error\"\n",
+    "\n",
+    "    print (f\"The test point {point} is classified as: {prediction_label}.\")\n"
    ]
   }
  ],
