Deleted some dead ends and previous redundant parts, polished a bit the exposure

--- a/Labs/Labb2.ipynb
+++ b/Labs/Labb2.ipynb
@@ -16,17 +16,17 @@
       "2 - Read a set of points from the file testpoints.txt\n",
       "3 - Visualize the dataset as a scatter plot graph\n",
       "4 - Randomly split the data in a training and test set.\n",
-      "Run 1: Accuracy 90.00%\n",
-      "Run 2: Accuracy 96.00%\n",
-      "Run 3: Accuracy 94.00%\n",
+      "Run 1: Accuracy 92.00%\n",
+      "Run 2: Accuracy 98.00%\n",
+      "Run 3: Accuracy 96.00%\n",
       "Run 4: Accuracy 94.00%\n",
-      "Run 5: Accuracy 92.00%\n",
-      "Run 6: Accuracy 96.00%\n",
+      "Run 5: Accuracy 94.00%\n",
+      "Run 6: Accuracy 98.00%\n",
       "Run 7: Accuracy 98.00%\n",
-      "Run 8: Accuracy 98.00%\n",
-      "Run 9: Accuracy 98.00%\n",
-      "Run 10: Accuracy 94.00%\n",
-      "Average accuracy after 10 runs: 95.00%\n"
+      "Run 8: Accuracy 96.00%\n",
+      "Run 9: Accuracy 96.00%\n",
+      "Run 10: Accuracy 90.00%\n",
+      "Average accuracy after 10 runs: 95.20%\n"
      ]
     }
    ],
@@ -47,6 +47,8 @@
     "#I decided to divide the functions in different sections based on functionality\n",
     "\n",
     "#******************************   DATA CLEANING  ********************************\n",
+    "\n",
+    "#This function will strip each line removing all whitespaces and separating values at the comma, then assigning them\n",
     "def clean_line(line):\n",
     "    try:\n",
     "        stripped = [item.strip() for item in line.split(',')]\n",
@@ -60,7 +62,7 @@
     "        print(f\"Skipping line {line.strip()}. Error{e}.\")\n",
     "        return None\n",
     "\n",
-    "\n",
+    "# I created the same process for the testpoints file, in case we want to add all test points directly there\n",
     "def clean_testpoints(line):\n",
     "\n",
     "    stripped = line.strip()\n",
@@ -74,7 +76,7 @@
     "    except(ValueError,IndexError):\n",
     "        return None \n",
     "    \n",
-    "\n",
+    "#Function to make lists with all points of the same label\n",
     "def split_data(all_points):\n",
     "    #We first divide the data in two lists by using the label\n",
     "    pichu_all = [p for p in all_points if p[2]==0]\n",
@@ -99,24 +101,28 @@
     "#*************************************** CALCULATIONS *************************************\n",
     "\n",
     "\n",
-    "def euclidean_distance(p1,p2): #This will be used for the nearest neighbour algorithm\n",
+    "def euclidean_distance(p1,p2): #The euclidean distance will be used for the nearest neighbour function\n",
     "    dist_x = p2[0] - p1[0]\n",
     "    dist_y = p2[1] - p1[1]\n",
     "    distance = math.sqrt(dist_x**2 + dist_y**2)\n",
     "    return distance\n",
     "\n",
-    "\n",
+    "#Nearest neighbor calculation\n",
     "def k_nene(training_set, test_point):\n",
-    "    dist_labels = []\n",
+    "    dist_labels = [] #list of labels for distances of NN\n",
     "\n",
     "    for width,height, label in training_set:\n",
     "        point = (width,height)\n",
     "        distance = euclidean_distance(point,test_point)\n",
     "        dist_labels.append((distance,label))\n",
     "    \n",
+    "    #We sort the distances to get the smallest ones on top and add the top k ones to the list\n",
     "    dist_labels.sort()\n",
     "    nearest = dist_labels[:k]\n",
     "    \n",
+    "    #Here we add all the labels in the NN list.\n",
+    "    #Being the values 0 and 1, the total will be the number of Pikachus\n",
+    "    #I'm aware that this would not work if we had more labels and we would need to add each NN to its own variable.\n",
     "    counter = sum(neighbor[1] for neighbor in nearest)\n",
     "\n",
     "    if counter > (k-counter):\n",
@@ -126,7 +132,7 @@
     "\n",
     "#*****************************************  OUTPUT ***********************************\n",
     "\n",
-    "\n",
+    "#Function to print the plots\n",
     "def plot(all_points, test_points=None):\n",
     "    pichu_x = []\n",
     "    pichu_y = []\n",
@@ -159,29 +165,23 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "\n",
+    "#Function to calculate predictions based on NN\n",
     "def prediction(training_data, points):\n",
     "        predlist=[]\n",
     "        for point in points:\n",
-    "            #I can't take credit for this next block of code, it was suggested by AI assistant \n",
-    "            # to solve the issue with different inputs with or without label\n",
+    "            #I can't take credit for this next block of code, it was suggested by an AI assistant \n",
+    "            # to solve the issue with different inputs formats with or without label\n",
     "            coords = point  \n",
     "            if isinstance(point, tuple) and len(point) == 3:\n",
     "                coords = (point[0], point[1])\n",
     "\n",
     "            pred = k_nene(training_data, coords)\n",
     "            predlist.append(pred)\n",
-    "\n",
-    "            if pred == 1: prediction_label = \"Pikachu\"\n",
-    "            elif pred == 0: prediction_label = \"Pichu\"\n",
-    "            else: prediction_label = \"Error\"\n",
-    "\n",
-    "            #print (f\"The test point {coords} is classified as: {prediction_label}.\")\n",
     "        \n",
     "        return predlist\n",
     "\n",
     "\n",
-    "\n",
+    "#Function to calculate the accuracy of datasets\n",
     "def accuracy(predictions, true_labels):\n",
     "    correct = 0\n",
     "    total = len(predictions)\n",
