Added intro test

--- a/Labs/Labb2.ipynb
+++ b/Labs/Labb2.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "077127f3",
+   "metadata": {},
+   "source": [
+    "## LABB2\n",
+    "\n",
+    "Kommentarerna säger nästan allt.\n",
+    "\n",
+    "JAg använt AI för att hitta fel och hitta lösning till ett problem jag hade med att \"prediction\" funktionen \n",
+    "fick data i olika format beroende på om det fick data från användaren eller fil.\n",
+    "\n",
+    "Också jag får inte samma resultat som i facit för den andra testpunkt prediction.\n",
+    "Det beror på att punkten har de 4 närmsta punkter är **Pichu**, men de flesta är **Pikachu**, \n",
+    "så om man använder olika k värde, får man olika resultat. \n",
+    "Jag tänkte räkna ett **genomsnittligt avstånd** för att få ett mer exact resultat, men i slutet det bara blir okej i denna specifik fall,\n",
+    "också uppgiften krävde **majoritetsröstning**, så det gjorde jag.\n",
+    "\n",
+    "Också, jag tänkte använda *k=11* som default  som antal **Nearest Neighbour** för att undvika ett jämt resultat, typ **5=5** men, igen gjörde som uppgift sa.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "45d5fc7b",
