Added the classification system

--- a/Labs/Labb3/Labb3.ipynb
+++ b/Labs/Labb3/Labb3.ipynb
@@ -5,7 +5,76 @@
    "execution_count": null,
    "id": "c08ac8ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.885908</td>\n",
+       "      <td>-1.997408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.090362</td>\n",
+       "      <td>2.562490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-2.928221</td>\n",
+       "      <td>0.082387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.895800</td>\n",
+       "      <td>2.435458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.358964</td>\n",
+       "      <td>-1.038429</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          X         y\n",
+       "0 -1.885908 -1.997408\n",
+       "1  2.090362  2.562490\n",
+       "2 -2.928221  0.082387\n",
+       "3  2.895800  2.435458\n",
+       "4 -2.358964 -1.038429"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -14,7 +83,11 @@
     "k = -1\n",
     "m = 0\n",
     "\n",
-    "df = pd.read_csv(\"unlabelled_data.csv\", header = None)"
+    "df = pd.read_csv(\"unlabelled_data.csv\", header = None)\n",
+    "df.rename(columns={0:\"X\",1:\"Y\"}, inplace=True)\n",
+    "df.head()\n",
+    "\n",
+    "df.apply()"
    ]
   },
   {
@@ -65,6 +138,16 @@
    "metadata": {},
    "source": [
     "Now we move to the classification of the points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c7ea648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify(k,m,x,y):"
    ]
   }
  ],
