--- a/Labs/Labb3/report.ipynb
+++ b/Labs/Labb3/report.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4b96347e",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Classification for my_line:\n",
+      "Classification for my_line, k:-1, m:0:\n",
       "\n",
       "Label_my_line\n",
       "1    302\n",
@@ -201,7 +201,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Classification for f(x):\n",
+      "Classification for f(x), k:-0.489, m:0:\n",
       "\n",
       "Label_f(x)\n",
       "1    301\n",
@@ -224,7 +224,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Classification for g(x):\n",
+      "Classification for g(x), k:-2, m:0.16:\n",
       "\n",
       "Label_g(x)\n",
       "1    301\n",
@@ -247,7 +247,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Classification for h(x):\n",
+      "Classification for h(x), k:800, m:-120:\n",
       "\n",
       "Label_h(x)\n",
       "1    302\n",
@@ -283,7 +283,7 @@
     "\n",
     "        df[column] = df.apply(lambda row:1 if row[\"Y\"] > ( k * row[\"X\"] +m) else 0, axis=1)\n",
     "        \n",
-    "        print(f\"\\nClassification for {line['label']}:\\n\")\n",
+    "        print(f\"\\nClassification for {line['label']}, k:{line[\"k\"]}, m:{line[\"m\"]}:\\n\")\n",
     "        print(df[column].value_counts())\n",
     "        plot2(df,line,column)\n",
     "\n",
