--- a/Labs/Labb3/report.ipynb
+++ b/Labs/Labb3/report.ipynb
@@ -323,6 +323,7 @@
     "Medan de andra linjerna verkar följa inriktningen på gapet mellan klustren, har linjen h(x) en extremt stor lutning (vilket gjorde att scatterplotten behövde begränsas i storlek) och ser ut att löpa nästan parallellt med y-axeln. Den delar punkterna i positiva och negativa x-värden, medan de andra linjerna verkar vara mer nyanserade.\n",
     "\n",
     "Angående frågan om det finns ett bästa val av linje, skulle jag, av de analyserade linjerna, säga alla utom h(x).\n",
+    "Om jag skulle behöva välja en, skulle jag välja **g(x)** eftersom den, till skillnad från de andra, åtminstone visuellt verkar ge den tydligaste separationen mellan de två klustren och lämnar gott om utrymme emellan dem, medan de andra giltiga linjerna verkar vara lite på gränsen, nuddar vissa punkter och lämnar en liten osäkerhetsmarginal.\n",
     "\n",
     "För att besvara hur många sådana linjer som kan finnas, skulle jag tro att så länge de passerar genom gapet mellan klustren och följer rätt orientering, kan de betraktas som giltiga val.\n",
     "\n",
@@ -346,8 +347,12 @@
     "While it looks like all 4 lines split the data quite evenly in half, the line h(x) gives an inverted result for almost all points ( I thought there was something wrong with the colors in the beginning, but then checking the labelled_data.csv file I could see it returned the opposite of each label, or at least those I could check, compared to the other 3 lines). \n",
     "Also while the other lines seem to follow the alignment of the gap between the clusters of points, the h(x) line, which also has an enormous slope (which made it so that the scatter plot needed to be limited in size), seems to run almost parallel to the y axis, splitting the points in x positive and x negative, while the other lines seem to be a bit more nuanced.\n",
     "\n",
-    "So, to the question whether there is a best choice for a line, I would say, of those analyzed, all excepth h(x),\n",
-    "And to answer how many lines can there be, I would think as long as they pass in the gap between the clusters, following the right orientation, they could be considered valid choices.\n",
+    "So, to the question whether there is a best choice for a line, I would say, of those analyzed, all excepth h(x).\n",
+    "\n",
+    "If I had to pick one, I would go with **g(x)** because unlike the others it seems at least visually to give the clearest separation between the two clusters leaving good space in between them, while the other valid ones seem to be a bit on the edge, touching some points and leaving a small margin of uncertainty.\n",
+    "\n",
+    "To answer how many lines can there be, I would think as long as they pass in the gap between the clusters, following the right orientation, they could be considered valid choices.\n",
+    "\n",
     "Then again, not knowing what the points represent it's hard to say, but one would think for machine learning and prediction, one would like to follow visible patterns. That until I really learn how it really works. "
    ]
   }
