new exercises completed

--- a/Exercises/06-functions/06-functions-exericse.ipynb
+++ b/Exercises/06-functions/06-functions-exericse.ipynb
@@ -326,6 +326,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Marcus', 'Ida Anderson', 'Olof Olofsson']\n"
+     ]
+    }
+   ],
+   "source": [
+    "strings = [\"  MaRcUs \", \" iDA aNderSon\", \"OLOF Olofsson            \"]\n",
+    "\n",
+    "def cleaner(names_list):\n",
+    "    final_names = []\n",
+    "    for n in names_list:\n",
+    "        \n",
+    "        clean_names = n.strip().lower() #Removes spaces from the sides and makes everything lowercase\n",
+    "        split_names = clean_names.split() #divides the words to remove any unnecessary space between words\n",
+    "        joined = \" \".join(split_names) #Joins name and surname in a single entry\n",
+    "        caps = joined.title() #Capitalizes the first letter of each word\n",
+    "        final_names.append(caps) #Appends in the list\n",
+    "\n",
+    "    return final_names\n",
+    "\n",
+    "names = cleaner(strings)\n",
+    "print(names)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "## 5. Change (**)\n",
     "\n",
